# CRSD_CNSB

./: .gitignore  README.md  general_todo.md  pyproject.toml  requirements.txt  run_everything.sh  setup_env.sh
core/: curl_data_repo.sh  run_everything.sh
figures/: ARCH_JGLAC_Fig06_Exp_T24_T06_Crossplots.py  JGLAC_Fig01c_experimental_chamber_diagram.py  JGLAC_Fig02_Steady_State_Parameter_Space.py  JGLAC_Fig03_T24_T6_Nt_Plot.py  JGLAC_Fig04_Cavity_Geometries.py  JGLAC_Fig05_Experiment_T24_Timeseries.py  JGLAC_Fig06_Exp_T24_Crossplots.py  JGLAC_Fig06_Experiment_T6_Timeseries.py  JGLAC_Fig07_Exp_T24_Crossplots.py  JGLAC_Fig07_Experiment_T6_Timeseries.py  JGLAC_Fig08_Exp_T06_Crossplots.py  JGLAC_Fig09_PMT_loc.py  figure_development.ipynb
model/: Model_UW_CRSD_Parameter_Space.py  lliboutry_kamb_model.py  methods.py
param/: LVDT_processing.csv  UTC_experiment_times.csv
processing/: S4_process_LVDT.py  S5_cavity_geometry_modeling.py
processing/ingestion/: CRSD_volts2phys.py  merge_raw_LVDT.py
processing/initial/: CRSD_volts2phys.py  merge_raw_LVDT.py
processing/preprocess/: despike_timeseries.py  evenly_sample_timeseries.py  smooth_timeseries.py
processing/preprocessing/: CRSD_volts2phys.py  S0_merge_LVDT.py  S1_process_cavity_picks.py  S1_process_cavity_picks_v2.py  S2_raw_data_processing.py  S3_smooth_despike_and_segment_data.py  despike_timeseries.py  evenly_sample_timeseries.py  (+3 more)
scripts/: run_everything copy.sh  run_everything.sh  setup_env.sh  step0_setup_processing_repo.sh  step1_run_processing.sh  step2_generate_plots.sh  step2_generate_plots_HiRes.sh
src/: util.py
(+32 files in other folders)
