[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"

[project]
name="CRSD_CNSB"
authors = [{name="Nathan T. Stevens", email="ntsteven@uw.edu"},
           {name="Dougal D. Hansen", email="ddhansen3@wisc.edu"}]
requires-python = ">=3.9"
version = "1.0.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC 4.0 BY :: Creative Commons By Attribution License",
    "Operating System :: OS Agnostic",
    "Development Status :: 2 - Beta"
]
dependencies = [
    "scipy",
    "numpy",
    "matplotlib",
    "pandas",
    "ipython",
    "tqdm"
]

[tool.setuptools.packages.find]
include = ["src*"]

[project.urls]
GitHub = "https://github.com/nts345045/CRSD_CNSB"
